welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: '(' expected but identifier found.
  if a%10==b%10{
     ^lastDigit:6: error: illegal start of simple expression
} 
^